# schema/generated/openapi.json
@@ -550,6 +550,17 @@
           {
             "schema": {
               "type": "string",
+              "minLength": 16,
+              "maxLength": 128,
+              "pattern": "^[A-Za-z0-9_-]+$"
+            },
+            "required": false,
+            "name": "app_state",
+            "in": "query"
+          },
+          {
+            "schema": {
+              "type": "string",
               "maxLength": 64
             },
             "required": false,
